package obiba.mica;
option java_package = "org.obiba.mica.web.model";
import "Mica.proto";


message JoinQueryDto {
  optional string locale = 7 [default = "en"];
  optional QueryDto variableQueryDto = 1;
  optional QueryDto datasetQueryDto = 2;
  optional QueryDto studyQueryDto = 3;
  optional QueryDto networkQueryDto = 4;
}

message QueryDto {
  required int32 from = 1 [default = 0];
  required int32 size = 2 [default = 10];
  optional SortDto sort = 3;
  optional QueryStringDto queryString = 4;
  optional FilteredQueryDto filteredQuery = 5;
  repeated string aggsBy = 6; // sub aggregations for the listed fields

  message QueryStringDto {
    required string query = 1;
    repeated string fields = 2;
  }

  message SortDto {
    enum Order {
      ASC = 0;
      DESC = 1;
    }

    required string field = 1;
    required Order order = 2 [default = ASC];
  }
}

message FilteredQueryDto {
  extensions 1000 to max;
}

message BoolFilterQueryDto {
  enum Operator {
    MUST = 0;
    SHOULD = 1;
    MUST_NOT = 2;
  }

  required Operator op = 1;
  repeated FilteredQueryDto filteredQuery = 2;

  extend FilteredQueryDto {
    optional BoolFilterQueryDto filter = 1000;
  }
}

message FieldStatementDto {
  enum Operator {
    _AND = 0; // must
    _OR = 1;  // should
    _AND_NOT = 2; // must_not
  }

  required FieldFilterQueryDto field = 1;
  optional Operator op = 2;
}

message LogicalFilterQueryDto {

  repeated FieldStatementDto fields = 1;

  extend FilteredQueryDto {
    optional LogicalFilterQueryDto filter = 1001;
  }
}

message FieldFilterQueryDto {
  required string field = 1;
  extensions 1000 to max;

  extend FilteredQueryDto {
    optional FieldFilterQueryDto filter = 1002;
  }
}

message TermsFilterQueryDto {
  repeated string values = 2;

  extend FieldFilterQueryDto {
    optional TermsFilterQueryDto terms = 1000;
  }
}

message RangeConditionDto {
  enum Operator {
    LT = 0;
    LTE = 1;
    GT = 2;
    GTE = 3;
  }

  required Operator op = 1;
  required string value = 2;
}

message RangeFilterQueryDto {

  optional RangeConditionDto from = 1;
  optional RangeConditionDto to = 2;

  extend FieldFilterQueryDto {
    optional RangeFilterQueryDto range = 1001;
  }
}

message JoinQueryResultDto {
  optional QueryResultDto variableResultDto = 1;
  optional QueryResultDto datasetResultDto = 2;
  optional QueryResultDto studyResultDto = 3;
  optional QueryResultDto networkResultDto = 4;
}

message QueryResultDto {
  repeated AggregationResultDto aggs = 1;
  required int32 totalHits = 2;
  required int64 totalCount = 3;

  extensions 1000 to max;
}


message DatasetVariableResultDto {
  repeated obiba.mica.DatasetVariableResolverDto summaries = 1;
  repeated obiba.mica.DatasetVariableDto variables = 2;
  repeated obiba.mica.DatasetDto datasets = 3;

  extend QueryResultDto {
    optional DatasetVariableResultDto result = 1000;
  }
}

message DatasetResultDto {
  repeated obiba.mica.DatasetDto datasets = 1;
  repeated obiba.mica.DocumentDigestDto digests = 2;

  extend QueryResultDto {
    optional DatasetResultDto result = 1001;
  }
}

message StudyResultDto {
  repeated obiba.mica.StudySummaryDto summaries = 1;
  repeated obiba.mica.StudyDto studies = 2;
  repeated obiba.mica.DocumentDigestDto digests = 3;

  extend QueryResultDto {
    optional StudyResultDto result = 1002;
  }
}

message CountStatsDto {
  optional int32 variables = 1;
  optional int32 studyDatasets = 2;
  optional int32 harmonizationDatasets = 3;
  optional int32 studies = 4;
  optional int32 networks = 5;

  extend StudySummaryDto {
    optional CountStatsDto studyCountStats = 1001;
  }

  extend DatasetDto {
    optional CountStatsDto datasetCountStats = 1003;
  }

  extend NetworkDto {
    optional CountStatsDto networkCountStats = 1001;
  }
}

message NetworkResultDto {
  repeated obiba.mica.NetworkDto networks = 1;
  repeated obiba.mica.DocumentDigestDto digests = 2;

  extend QueryResultDto {
    optional NetworkResultDto result = 1003;
  }
}

message StudySummariesResultDto {
  repeated obiba.mica.StudySummaryDto summaries = 1;

  extend QueryResultDto {
    optional StudySummariesResultDto result = 1009;
  }
}

message AggregationResultDto {
  required string aggregation = 1;
  extensions 1000 to max;
}

message TermsAggregationResultDto {
  required string key = 1;
  optional string title = 2;
  optional string description = 3;
  required int32 default = 4;
  required int32 count = 5;
  repeated AggregationResultDto aggs = 6;

  extend AggregationResultDto {
    repeated TermsAggregationResultDto terms = 1000;
  }
}

message StatsAggregationResultDataDto {
  required int64 count = 1;
  optional double min = 2;
  optional double max = 3;
  optional double avg = 4;
  optional double sum = 5;
}

message StatsAggregationResultDto {
  required StatsAggregationResultDataDto default = 1;
  required StatsAggregationResultDataDto data = 2;

  extend AggregationResultDto {
    optional StatsAggregationResultDto stats = 1001;
  }
}

message BucketCoverageDto {
  required string field = 1;
  required string value = 2;
  required int32 hits = 3;
  optional int32 count = 4;
}

message TermCoverageDto {
  required obiba.mica.TaxonomyEntityDto term = 1;
  required int32 hits = 2;
  repeated BucketCoverageDto buckets = 3;
}

message VocabularyCoverageDto {
  required obiba.mica.TaxonomyEntityDto vocabulary = 1;
  required int32 hits = 2;
  optional int32 count = 3; // sum of the hits of vocabulary allows multiple terms
  repeated BucketCoverageDto buckets = 4;
  repeated TermCoverageDto terms = 5;
}

message TaxonomyCoverageDto {
  required obiba.mica.TaxonomyEntityDto taxonomy = 1;
  required int32 hits = 2;
  repeated BucketCoverageDto buckets = 3;
  repeated VocabularyCoverageDto vocabularies = 4;
}

message TaxonomiesCoverageDto {
  repeated TaxonomyCoverageDto taxonomies = 1;
  required int32 totalHits = 2;
  required int64 totalCount = 3;
  repeated string by = 4;
}


